@@ -6,7 +6,10 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Added the needed permissions for the draft state so that the Owner of a
+  document can modifies it when working on a draft version of his document.
+- Made the permissions on draft related transitions consistent: a
+  WorkspaceMember can perform all those transitions.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
